Changelog
=========

1.0a3 (unreleased)
------------------

- Nothing changed yet.


1.0a2 (2014-01-29)
------------------

- Add widget that supports streaming partial ranges of video content
  from video and audio fields. This package now supports video seeking
  in Chrome and iOS video display with content-range request support. 
  [davidjb]
- Configure CSS to apply prefix to local resources utilised for
  MediaElement.js. Previously, images used in CSS did not load
  when running outside of debug mode.
  [davidjb]
- Upgrade MediaElement.js to 2.13.2.
  [davidjb]
- Switch to using ``plone.autoform`` for form directives rather
  than the old location in ``plone.directives.form``.
  [davidjb]
- Omit ogv and webm video fields from add and edit forms; allows access to
  field contents from main video view.
  [davidjb]
- Fix video display <source> URLs to point to correct fields. Previously,
  all links referred to the main MP4 video field.
  [davidjb]


1.0a1 (2013-12-18)
------------------

- Initial release