@@ -4,7 +4,8 @@ Changelog
 1.0a3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- fix video type definition
+  [vangheem]
 
 
 1.0a2 (2014-01-29)
